--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
 	</head>
 	<body>
 		<div class="sidebar"> 
-			<p class="company">DAWG <br> PIZZA </p>
+			<p class="company">DAWG <br> PIZZA <br>
+			<a href="index.html"><img src="img/logo2.jpg" height="150px" width="175px" alt="logo"></a>
+			</p>
 			<nav>
 				<ul>
-					<li><a href="menu.hml">MENU</a></li>
-					<li><a href="about.hml">ABOUT US</a></li>
-					<li><a href="jobs.hml">JOBS</a></li>
+					<li><a href="menu.html">MENU</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="jobs.html">JOBS</a></li>
 				</ul>
 			</nav>
 		</div>
 		<div class="content-box">
 			<img class="pizza" src="img/pizza2.jpg" alt="Our pizza">
-			<p class="phrase">Awesome wood-fired pizza with fresh ingredients baked to order.</p>
-			<p>Come in and eat, or call us for delivery!</p>
-			<p><a href="mailto:dawgpizzaseattle@gmail.com">Email</a> and <a href="https://twitter.com/DawgPizzaSea">follow </a>us on Twitter!</p>
-			<p class="footer"> &#169; Call us for delivery: 206-555-1212</p>
+			<br><br>
+			<a class="address" href="https://maps.google.com/maps?q=4306+University+Way+NE,+Seattle,+WA+98105)&ie=UTF-8&hq=&hnear=0x5490148b39e7e851:0x47f43ebdd6cf2dfe,4306+University+Way+NE,+Seattle,+WA+98105&gl=us&ei=OxlSUsPKD6mZiALHj4CwCQ&ved=0CCwQ8gEwAA">4306 University Way NE, Seattle, WA 98105</a> 
+			<p class="phrase">Awesome wood-fired pizza with fresh ingredients baked to order. <br>Come in and eat, or call us for delivery!
+			<br><br>
+			<p class="media"><a href="mailto:dawgpizzaseattle@gmail.com">Email</a> us and <a href="https://twitter.com/DawgPizzaSea" target="_blank">follow</a> us on Twitter.</p> 
+			<p class="footer"> 
+			&#169; Call us for delivery: 206-555-1212</p>
 		</div>
 	</body>
 </html>
