--- a/menu.html
+++ b/menu.html
@@ -18,8 +18,8 @@
 				</ul>
 			</nav>
 		</div>
-		<div class="menu">
-			<img src="img/pizza-order2.jpg" height="600px" width="900px" alt="Pizza Order">
+		<div class="content-box">
+			<img class ="order" src="img/pizza-order2.jpg" alt="Menu">
 			<dl>PIZZAS:</dl><br>
 			<p>All our pizzas are made with hand-thrown thin crust, baked in real wood ovens. Choose from one of these sizes:</p>
 
